# Lymn

./: .gitignore  Cargo.toml  README.md
dat/: config.toml
database_test_folder/assets/User/: config.toml
docu/: what_is_a_database.md
src/: lib.rs  main.rs
src/executor/: executor.rs  mod.rs  query_type.rs  sql_error.rs  table_printer.rs
src/ocarina/: Cargo.toml  mod.rs  ocarina.rs  query_traverser.rs
src/ocarina/src/: lib.rs
src/ocarina/src/types/: keyword.rs  mod.rs  operator.rs
src/ocarina/token/: def_compressor.rs  def_determinator.rs  determinator.rs  mod.rs  token.rs  token_evaluator.rs
src/ocarina/types/: data_type.rs  keyword.rs  mod.rs  operator.rs  seperator.rs
src/storage/buffer/: mod.rs  storage_buffer.rs
src/storage/disk/: database.rs  disk_table.rs  in_memory_table.rs  io.rs  mod.rs  pdf_table.rs  table.rs
tests/: query_execution_integration_test.rs
