[package]
name = "Lymn"
version = "0.1.0"
authors = ["Nick Anthony <Ilithium@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Lymn"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
roxmltree = "0.13.0"
prettytable-rs = "^0.8"
